--- a/views/layouts/dark.handlebars
+++ b/views/layouts/dark.handlebars
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>App</title>
     <link rel="stylesheet" href="/style.css">
-  </head>808080
+  </head>
   <body style="background: #858585; color: #ffffff">
 
     <header>
